cargo-features = ["different-binary-name"]

[package]
name = "blinker"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "blinker"
filename = "blinker.fap"
bench = false
test = false

[dependencies]
flipperzero = { workspace = true }
flipperzero-sys = { workspace = true }
flipperzero-rt = { workspace = true }
